force-app/main/default/objects/ProposalRequest__c/ProposalRequest__c.object-meta.xml
<CustomObject>
    <label>Proposal Request</label>
    <nameField>
        <label>Proposal Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>