force-app/main/default/objects/ProposalRequest__c/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proposal Requests</relationshipLabel>
    <relationshipName>Proposal_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>