force-app/main/default/objects/ProposalRequest__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proposal Requests</relationshipLabel>
    <relationshipName>Proposal_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>