force-app/main/default/objects/ProposalRequest__c/fields/LeadMemberFirm__c.field-meta.xml
<CustomField>
    <fullName>LeadMemberFirm__c</fullName>
    <label>Lead Member Firm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>