force-app/main/default/objects/ProposalRequest__c/fields/MTBU_BU__c.field-meta.xml
<CustomField>
    <fullName>MTBU_BU__c</fullName>
    <label>MTBU/BU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>