force-app/main/default/objects/ProposalRequest__c/fields/PartnerDirectorLeadingTheProposal__c.field-meta.xml
<CustomField>
    <fullName>PartnerDirectorLeadingTheProposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner/Director leading the Proposal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proposal_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>