force-app/main/default/objects/ProposalRequest__c/fields/ProposalSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>ProposalSubmissionDate__c</fullName>
    <label>Proposal Submission Date</label>
    <type>Date</type>
</CustomField>