force-app/main/default/objects/ProposalRequest__c/fields/ProposalValue__c.field-meta.xml
<CustomField>
    <fullName>ProposalValue__c</fullName>
    <label>Proposal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>