force-app/main/default/objects/ProposalRequest__c/fields/SpecifyDetailOfTheSupportRequired__c.field-meta.xml
<CustomField>
    <fullName>SpecifyDetailOfTheSupportRequired__c</fullName>
    <label>Specify Detail Of The Support Required</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>